--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
              </div>
              <div class="nav-list">
               <ul>
-                  <li><a href="index.html">Contact</a></li>
-                  <li><a href="index.html">About</a></li>
-                  <li><a href="https://www.w3schools.com/w3css/w3css_navigation.asp">Home</a></li>
+                   <li><a href="#project">Project</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="index.html">Home</a></li>
               </ul>
             </div>
         </div>
@@ -90,9 +90,9 @@
            </div>
            <div class="Footer-list">
                <ul>
-                   <li>Home</li>
-                   <li>About</li>
-                   <li>Contact</li>
+                     <li><a href="index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#project">Project</a></li>
                </ul>
            </div>
        </div>
