--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="design"></div>
                 <div class="design2"></div>
             </div>
-            <div class="About">
+            <div id="about" class="About">
                     <div class="about-title">About</div>
                     <div class="about-content">
                       <span> <i class="fa fa-university" aria-hidden="true"  style="font-size:48px;"></i>
@@ -58,7 +58,7 @@
                       <div class="design8"></div>
             </div>
           
-            <div class="project">
+            <div id="project" class="project">
                 <div class="project-title "><bold>Projects</bold></div>
                 <div class="project-content">
                     <img src="img/portfoli-1.jpg">
